--- a/sandbox/notebook.ipynb
+++ b/sandbox/notebook.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -110,46 +110,46 @@
       "        [1.3000, 1.4000, 1.5000, 1.6000]])\n",
       "\n",
       "====== Sij =======\n",
-      "tensor([[0.3000, 0.7000, 1.1000, 1.5000],\n",
-      "        [0.7000, 1.7400, 2.7800, 3.8200],\n",
-      "        [1.1000, 2.7800, 4.4600, 6.1400],\n",
-      "        [1.5000, 3.8200, 6.1400, 8.4600]])\n",
+      "tensor([[0.9000, 1.0000, 1.1000, 1.2000],\n",
+      "        [2.0200, 2.2800, 2.5400, 2.8000],\n",
+      "        [3.1400, 3.5600, 3.9800, 4.4000],\n",
+      "        [4.2600, 4.8400, 5.4200, 6.0000]])\n",
       "\n",
       "====== mij_hat =======\n",
-      "tensor([[1.5000],\n",
-      "        [3.8200],\n",
-      "        [6.1400],\n",
-      "        [8.4600]])\n",
+      "tensor([[1.2000],\n",
+      "        [2.8000],\n",
+      "        [4.4000],\n",
+      "        [6.0000]])\n",
       "\n",
       "====== pij_hat =======\n",
-      "tensor([[3.0119e-01, 4.4933e-01, 6.7032e-01, 1.0000e+00],\n",
-      "        [4.4157e-02, 1.2493e-01, 3.5345e-01, 1.0000e+00],\n",
-      "        [6.4737e-03, 3.4735e-02, 1.8637e-01, 1.0000e+00],\n",
-      "        [9.4910e-04, 9.6577e-03, 9.8274e-02, 1.0000e+00]])\n",
+      "tensor([[0.7408, 0.8187, 0.9048, 1.0000],\n",
+      "        [0.4584, 0.5945, 0.7711, 1.0000],\n",
+      "        [0.2837, 0.4317, 0.6570, 1.0000],\n",
+      "        [0.1755, 0.3135, 0.5599, 1.0000]])\n",
       "\n",
       "====== lij_hat =======\n",
-      "tensor([[2.4208],\n",
-      "        [1.5225],\n",
-      "        [1.2276],\n",
-      "        [1.1089]])\n",
+      "tensor([[3.4644],\n",
+      "        [2.8240],\n",
+      "        [2.3724],\n",
+      "        [2.0489]])\n",
       "\n",
       "====== mi_new =======\n",
-      "tensor([[1.5000],\n",
-      "        [3.8200],\n",
-      "        [6.1400],\n",
-      "        [8.4600]])\n",
+      "tensor([[1.2000],\n",
+      "        [2.8000],\n",
+      "        [4.4000],\n",
+      "        [6.0000]])\n",
       "\n",
       "====== li_new =======\n",
-      "tensor([[2.4208],\n",
-      "        [1.5225],\n",
-      "        [1.2276],\n",
-      "        [1.1089]])\n",
+      "tensor([[3.4644],\n",
+      "        [2.8240],\n",
+      "        [2.3724],\n",
+      "        [2.0489]])\n",
       "\n",
       "====== O =======\n",
-      "tensor([[0.8915, 0.9915, 1.0915, 1.1915],\n",
-      "        [1.1067, 1.2067, 1.3067, 1.4067],\n",
-      "        [1.2103, 1.3103, 1.4103, 1.5103],\n",
-      "        [1.2566, 1.3566, 1.4566, 1.5566]])\n",
+      "tensor([[0.7499, 0.8499, 0.9499, 1.0499],\n",
+      "        [0.8276, 0.9276, 1.0276, 1.1276],\n",
+      "        [0.9002, 1.0002, 1.1002, 1.2002],\n",
+      "        [0.9655, 1.0655, 1.1655, 1.2655]])\n",
       "\n"
      ]
     }
@@ -175,7 +175,7 @@
     "print()\n",
     "\n",
     "print(\"====== Sij =======\")\n",
-    "Sij = Q @ K.T\n",
+    "Sij = Q @ K # TODO: I removed the transpose here to match GPU version \n",
     "print(Sij)\n",
     "print()\n",
     "\n",
@@ -621,7 +621,7 @@
     }
    ],
    "source": [
-    "#TODO: Cf goodnotes ipad \"Flash attention\"\n",
+    "#TODO: Cf goodnotes ipad \"Flash attention   \"\n",
     "\n",
     "def online_softmax(vec):\n",
     "    N = len(vec)\n",
