--- a/sandbox/notebook.ipynb
+++ b/sandbox/notebook.ipynb
@@ -96,60 +96,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "====== Q =======\n",
-      "tensor([[0.1000, 0.2000, 0.3000, 0.4000],\n",
-      "        [0.5000, 0.6000, 0.7000, 0.8000],\n",
-      "        [0.9000, 1.0000, 1.1000, 1.2000],\n",
-      "        [1.3000, 1.4000, 1.5000, 1.6000]])\n",
-      "\n",
-      "====== Sij =======\n",
-      "tensor([[0.9000, 1.0000, 1.1000, 1.2000],\n",
-      "        [2.0200, 2.2800, 2.5400, 2.8000],\n",
-      "        [3.1400, 3.5600, 3.9800, 4.4000],\n",
-      "        [4.2600, 4.8400, 5.4200, 6.0000]])\n",
-      "\n",
-      "====== mij_hat =======\n",
-      "tensor([[1.2000],\n",
-      "        [2.8000],\n",
-      "        [4.4000],\n",
-      "        [6.0000]])\n",
-      "\n",
-      "====== pij_hat =======\n",
-      "tensor([[0.7408, 0.8187, 0.9048, 1.0000],\n",
-      "        [0.4584, 0.5945, 0.7711, 1.0000],\n",
-      "        [0.2837, 0.4317, 0.6570, 1.0000],\n",
-      "        [0.1755, 0.3135, 0.5599, 1.0000]])\n",
-      "\n",
-      "====== lij_hat =======\n",
+      "====== tile_denominator =======\n",
       "tensor([[3.4644],\n",
       "        [2.8240],\n",
       "        [2.3724],\n",
       "        [2.0489]])\n",
       "\n",
-      "====== mi_new =======\n",
+      "====== new_rowmax =======\n",
       "tensor([[1.2000],\n",
       "        [2.8000],\n",
       "        [4.4000],\n",
       "        [6.0000]])\n",
       "\n",
-      "====== li_new =======\n",
+      "====== update_prev_exponent  =======\n",
+      "tensor([[0.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [0.]])\n",
+      "====== new_denominator =======\n",
       "tensor([[3.4644],\n",
       "        [2.8240],\n",
       "        [2.3724],\n",
       "        [2.0489]])\n",
-      "\n",
-      "====== O =======\n",
-      "tensor([[0.7499, 0.8499, 0.9499, 1.0499],\n",
-      "        [0.8276, 0.9276, 1.0276, 1.1276],\n",
-      "        [0.9002, 1.0002, 1.1002, 1.2002],\n",
-      "        [0.9655, 1.0655, 1.1655, 1.2655]])\n",
       "\n"
      ]
     }
@@ -167,47 +142,72 @@
     "m = torch.full((seq_len, 1), -torch.inf)\n",
     "l = torch.zeros((seq_len, 1))\n",
     "\n",
-    "mi = m  # shape Br x 1\n",
-    "li = l  # shape Br x 1\n",
+    "prev_rowmax = m  # shape Br x 1\n",
+    "prev_denominator = l  # shape Br x 1\n",
     "\n",
-    "print(\"====== Q =======\")\n",
-    "print(Q)\n",
-    "print()\n",
+    "# print(\"====== Q =======\")\n",
+    "# print(Q)\n",
+    "# print()\n",
     "\n",
-    "print(\"====== Sij =======\")\n",
+    "# print(\"====== Sij =======\")\n",
     "Sij = Q @ K # TODO: I removed the transpose here to match GPU version \n",
-    "print(Sij)\n",
+    "# print(Sij)\n",
+    "# print()\n",
+    "\n",
+    "# print(\"====== tile_rowmax =======\")\n",
+    "tile_rowmax = torch.max(Sij, dim=1).values[:, None]\n",
+    "# print(tile_rowmax)\n",
+    "# print()\n",
+    "\n",
+    "# print(\"====== tile_numerator =======\")\n",
+    "tile_numerator = torch.exp(Sij - tile_rowmax)\n",
+    "# print(tile_numerator)\n",
+    "# print()\n",
+    "\n",
+    "print(\"====== tile_denominator =======\")\n",
+    "tile_denominator = torch.sum(tile_numerator, dim=1)[:, None]\n",
+    "print(tile_denominator)\n",
     "print()\n",
     "\n",
-    "print(\"====== mij_hat =======\")\n",
-    "mij_hat = torch.max(Sij, dim=1).values[:, None]\n",
-    "print(mij_hat)\n",
+    "print(\"====== new_rowmax =======\")\n",
+    "new_rowmax = torch.max(torch.column_stack([prev_rowmax, tile_rowmax]), dim=1).values[:, None]\n",
+    "print(new_rowmax)\n",
     "print()\n",
     "\n",
-    "print(\"====== pij_hat =======\")\n",
-    "pij_hat = torch.exp(Sij - mij_hat)\n",
-    "print(pij_hat)\n",
+    "print(\"====== update_prev_exponent  =======\")\n",
+    "update_prev_exponent = torch.exp(prev_rowmax - new_rowmax)\n",
+    "print(update_prev_exponent)\n",
+    "\n",
+    "print(\"====== new_denominator =======\")\n",
+    "new_denominator = prev_denominator * update_prev_exponent + torch.exp(tile_rowmax - new_rowmax) * tile_denominator\n",
+    "print(new_denominator)\n",
     "print()\n",
     "\n",
-    "print(\"====== lij_hat =======\")\n",
-    "lij_hat = torch.sum(pij_hat, dim=1)[:, None]\n",
-    "print(lij_hat)\n",
-    "print()\n",
-    "\n",
-    "print(\"====== mi_new =======\")\n",
-    "mi_new = torch.max(torch.column_stack([mi, mij_hat]), dim=1).values[:, None]\n",
-    "print(mi_new)\n",
-    "print()\n",
-    "\n",
-    "print(\"====== li_new =======\")\n",
-    "li_new = torch.exp(mi - mi_new) * li + torch.exp(mij_hat - mi_new) * lij_hat\n",
-    "print(li_new)\n",
-    "print()\n",
-    "\n",
-    "print(\"====== O =======\")\n",
-    "O = (li * torch.exp(mi - mi_new) * O / li_new) + (torch.exp(mij_hat - mi_new) * pij_hat / li_new) @ V\n",
-    "print(O)\n",
-    "print()\n"
+    "# print(\"====== O =======\")\n",
+    "# O = (li * torch.exp(mi - mi_new) * O / li_new) + (torch.exp(tile_rowmax - mi_new) * pij_hat / li_new) @ V\n",
+    "# print(O)\n",
+    "# print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.exp(-float(\"inf\"))"
    ]
   },
   {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -383,16 +383,16 @@
       "        [8.4600]])\n",
       "\n",
       "====== li_new =======\n",
-      "tensor([[2.4208],\n",
-      "        [1.5225],\n",
-      "        [1.2276],\n",
-      "        [1.1089]])\n",
+      "tensor([[1.6703],\n",
+      "        [1.3535],\n",
+      "        [1.1864],\n",
+      "        [1.0983]])\n",
       "\n",
       "====== O =======\n",
-      "tensor([[0.8915, 0.9915, 1.0915, 1.1915],\n",
-      "        [1.1067, 1.2067, 1.3067, 1.4067],\n",
-      "        [1.2103, 1.3103, 1.4103, 1.5103],\n",
-      "        [1.2566, 1.3566, 1.4566, 1.5566]])\n",
+      "tensor([[1.1395, 1.2395, 1.3395, 1.4395],\n",
+      "        [1.1955, 1.2955, 1.3955, 1.4955],\n",
+      "        [1.2372, 1.3372, 1.4372, 1.5372],\n",
+      "        [1.2642, 1.3642, 1.4642, 1.5642]])\n",
       "\n"
      ]
     }
@@ -441,25 +441,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.7505],\n",
-      "        [0.1691],\n",
-      "        [0.0412],\n",
-      "        [0.0106]])\n",
+      "tensor([[0.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [0.]])\n",
       "tensor([[1.6703],\n",
       "        [1.3535],\n",
       "        [1.1864],\n",
       "        [1.0983]])\n",
-      "tensor([[2.4208],\n",
-      "        [1.5225],\n",
-      "        [1.2276],\n",
-      "        [1.1089]])\n"
+      "tensor([[1.6703],\n",
+      "        [1.3535],\n",
+      "        [1.1864],\n",
+      "        [1.0983]])\n"
      ]
     }
    ],
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
        "2.4208"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,9 +491,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tensor' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m tensor([[\u001b[39m0.8915\u001b[39m, \u001b[39m0.9915\u001b[39m, \u001b[39m1.0915\u001b[39m, \u001b[39m1.1915\u001b[39m],\n\u001b[1;32m      2\u001b[0m         [\u001b[39m1.1067\u001b[39m, \u001b[39m1.2067\u001b[39m, \u001b[39m1.3067\u001b[39m, \u001b[39m1.4067\u001b[39m],\n\u001b[1;32m      3\u001b[0m         [\u001b[39m1.2103\u001b[39m, \u001b[39m1.3103\u001b[39m, \u001b[39m1.4103\u001b[39m, \u001b[39m1.5103\u001b[39m],\n\u001b[1;32m      4\u001b[0m         [\u001b[39m1.2566\u001b[39m, \u001b[39m1.3566\u001b[39m, \u001b[39m1.4566\u001b[39m, \u001b[39m1.5566\u001b[39m]])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'tensor' is not defined"
+     ]
+    }
+   ],
    "source": [
     "tensor([[0.8915, 0.9915, 1.0915, 1.1915],\n",
     "        [1.1067, 1.2067, 1.3067, 1.4067],\n",
@@ -513,20 +525,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([0., 1., 2., 3., 4., 5., 6., 7., 8., 9.])"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "torch.manual_seed(0)\n",
     "\n",
@@ -536,20 +537,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def naive_softmax(vec):\n",
     "   return torch.exp(vec) / torch.sum(torch.exp(vec))\n",
@@ -559,20 +549,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def safe_softmax(vec):\n",
     "    # Compute row max in 1st pass\n",
@@ -587,39 +566,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "prev_rowmax = -inf | rowmax = 0.0 | denominator = 1.0\n",
-      "prev_rowmax = 0.0 | rowmax = 1.0 | denominator = 1.3678793907165527\n",
-      "prev_rowmax = 1.0 | rowmax = 2.0 | denominator = 1.503214716911316\n",
-      "prev_rowmax = 2.0 | rowmax = 3.0 | denominator = 1.553001880645752\n",
-      "prev_rowmax = 3.0 | rowmax = 4.0 | denominator = 1.571317434310913\n",
-      "prev_rowmax = 4.0 | rowmax = 5.0 | denominator = 1.5780553817749023\n",
-      "prev_rowmax = 5.0 | rowmax = 6.0 | denominator = 1.5805342197418213\n",
-      "prev_rowmax = 6.0 | rowmax = 7.0 | denominator = 1.5814460515975952\n",
-      "prev_rowmax = 7.0 | rowmax = 8.0 | denominator = 1.5817815065383911\n",
-      "prev_rowmax = 8.0 | rowmax = 9.0 | denominator = 1.5819048881530762\n",
-      "tensor([1.2341e-04, 3.3546e-04, 9.1188e-04, 2.4788e-03, 6.7379e-03, 1.8316e-02,\n",
-      "        4.9787e-02, 1.3534e-01, 3.6788e-01, 1.0000e+00])\n",
-      "tensor(1.5819)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#TODO: Cf goodnotes ipad \"Flash attention   \"\n",
     "\n",
@@ -643,119 +592,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([0., 1., 2., 3., 4., 5., 6., 7., 8., 9.])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "prev_rowmax = -inf | rowmax = 0.0 | denominator = 1.0\n",
-      "prev_rowmax = 0.0 | rowmax = 1.0 | denominator = 1.3678793907165527\n",
-      "prev_rowmax = 1.0 | rowmax = 2.0 | denominator = 1.503214716911316\n",
-      "prev_rowmax = 2.0 | rowmax = 3.0 | denominator = 1.553001880645752\n",
-      "prev_rowmax = 3.0 | rowmax = 4.0 | denominator = 1.571317434310913\n",
-      "prev_rowmax = 4.0 | rowmax = 5.0 | denominator = 1.5780553817749023\n",
-      "prev_rowmax = 5.0 | rowmax = 6.0 | denominator = 1.5805342197418213\n",
-      "prev_rowmax = 6.0 | rowmax = 7.0 | denominator = 1.5814460515975952\n",
-      "prev_rowmax = 7.0 | rowmax = 8.0 | denominator = 1.5817815065383911\n",
-      "prev_rowmax = 8.0 | rowmax = 9.0 | denominator = 1.5819048881530762\n",
-      "tensor([1.2341e-04, 3.3546e-04, 9.1188e-04, 2.4788e-03, 6.7379e-03, 1.8316e-02,\n",
-      "        4.9787e-02, 1.3534e-01, 3.6788e-01, 1.0000e+00])\n",
-      "tensor(1.5819)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor([7.8013e-05, 2.1206e-04, 5.7645e-04, 1.5669e-03, 4.2594e-03, 1.1578e-02,\n",
-       "        3.1473e-02, 8.5552e-02, 2.3255e-01, 6.3215e-01])"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "online_softmax(x.clone())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([1.2341e-04, 3.3546e-04, 9.1188e-04, 2.4788e-03, 6.7379e-03, 1.8316e-02,\n",
-       "        4.9787e-02, 1.3534e-01, 3.6788e-01, 1.0000e+00])"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "torch.exp(x - torch.max(x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(1.5819)"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "torch.sum(torch.exp(x - torch.max(x)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([7.8013e-05, 2.1206e-04, 5.7645e-04, 1.5669e-03, 4.2594e-03, 1.1578e-02,\n",
-       "        3.1473e-02, 8.5552e-02, 2.3255e-01, 6.3215e-01])"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "torch.exp(x - torch.max(x)) / torch.sum(torch.exp(x - torch.max(x)))"
    ]
