breaking(gpu): flash attention gpu work when whole matrix fits in memory

--- a/sandbox/notebook.ipynb
+++ b/sandbox/notebook.ipynb
@@ -96,13 +96,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "====== tile_numerator =======\n",
+      "tensor([[0.7408, 0.8187, 0.9048, 1.0000],\n",
+      "        [0.4584, 0.5945, 0.7711, 1.0000],\n",
+      "        [0.2837, 0.4317, 0.6570, 1.0000],\n",
+      "        [0.1755, 0.3135, 0.5599, 1.0000]])\n",
+      "\n",
       "====== tile_denominator =======\n",
       "tensor([[3.4644],\n",
       "        [2.8240],\n",
@@ -159,10 +165,10 @@
     "# print(tile_rowmax)\n",
     "# print()\n",
     "\n",
-    "# print(\"====== tile_numerator =======\")\n",
+    "print(\"====== tile_numerator =======\")\n",
     "tile_numerator = torch.exp(Sij - tile_rowmax)\n",
-    "# print(tile_numerator)\n",
-    "# print()\n",
+    "print(tile_numerator)\n",
+    "print()\n",
     "\n",
     "print(\"====== tile_denominator =======\")\n",
     "tile_denominator = torch.sum(tile_numerator, dim=1)[:, None]\n",
