update (leaving criteo)

--- a/sandbox/notebook.ipynb
+++ b/sandbox/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -28,6 +28,53 @@
     "print(f\"Registers per block: {device.MAX_REGISTERS_PER_BLOCK}\")\n",
     "print(f\"Threads per block: {device.MAX_THREADS_PER_BLOCK}\")\n",
     "print(f\"Number of multiprocessors: {device.MULTIPROCESSOR_COUNT}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "blockspergrid: (128, 32, 32), threadsperblock: (128, 1, 1), shared_memory_size: 134144\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "import torch\n",
+    "\n",
+    "sizeof = lambda x: torch.tensor(0, dtype=x).element_size()\n",
+    "\n",
+    "B, C, SEQ_LEN, D_HEAD = (32, 32, 128, 128)\n",
+    "threadsperblock = (D_HEAD, 1, 1) # Should be max 1024\n",
+    "blockspergrid = (math.ceil(SEQ_LEN * D_HEAD / threadsperblock[0]), B, C)\n",
+    "shared_memory_size = (D_HEAD * sizeof(torch.float64)) * 3 + (SEQ_LEN**2 * sizeof(torch.float64))\n",
+    "    \n",
+    "print(f\"blockspergrid: {blockspergrid}, threadsperblock: {threadsperblock}, shared_memory_size: {shared_memory_size}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "131072"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(SEQ_LEN**2 * sizeof(torch.float64))"
    ]
   },
   {
